enforce non-empty new household members